--- a/Frontendmentor.html
+++ b/Frontendmentor.html
@@ -26,14 +26,14 @@
 
     <nav>
         <ul>
-           <a href="HomePage.html"><li>HomePage</li></a>
+           <a href="index.html"><li>HomePage</li></a>
             <a href="#contactinfo"><li>Contact Info</li></a>
         </ul>
     </nav>
 
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="HomePage.html">HomePage</a>
+        <a href="index.html">HomePage</a>
         <a href="#contactinfo">Contact Info</a>
       </div>
 
