--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </p>
 
         <p>
-            Skills: HTML,CSS,JS and Responsive Design.
+            Skills: HTML,CSS and JS.
         </p>
 
         <div class="projects"><a name="projects"></a>
