--- a/Frontendmentor.html
+++ b/Frontendmentor.html
@@ -27,6 +27,7 @@
     <nav>
         <ul>
            <a href="index.html"><li>HomePage</li></a>
+            <a href="Sideproject.html"><li>SideProject</li></a>
             <a href="#contactinfo"><li>Contact Info</li></a>
         </ul>
     </nav>
@@ -34,6 +35,7 @@
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">HomePage</a>
+        <a href="Sideproject.html">SideProject</a>
         <a href="#contactinfo">Contact Info</a>
       </div>
 
