--- a/Sideproject.html
+++ b/Sideproject.html
@@ -26,7 +26,7 @@
 
     <nav>
         <ul>
-           <a href="HomePage.html"><li>HomePage</li></a>
+           <a href="index.html"><li>HomePage</li></a>
            <a href="Frontendmentor.html"><li>Front-end-mentor</li></a> 
            <a href="#contactinfo"><li>Contact Info</li></a>
         </ul>
@@ -34,7 +34,7 @@
 
     <div id="mySidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="HomePage.html">HomePage</a>
+        <a href="index.html">HomePage</a>
         <a href="Frontendmentor.html">Front-end-mentor</a>
         <a href="#contactinfo">Contact Info</a>
       </div>
