--- a/Sideproject.html
+++ b/Sideproject.html
@@ -95,7 +95,7 @@
 
        <div>
                 <h1>Music App</h1>
-                <img class="img" src="./images/musicapp.PNG">
+                <img class="img" src="./images/musicapp.JPG">
                 
                 <div class="imgtxt">
                
