--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <script src="js.js" defer></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
 </head>
 
 <body onload="myFunction()" style="margin:0;">
@@ -40,6 +40,10 @@
       </div>
 
       <div class="open">
+              <div class="darkoption">
+              <span><i class="fas fa-sun"></i></span>
+              <span class="moon"><i class="fas fa-moon"></i></span>
+          </div>
           <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
 
       </div>
@@ -118,7 +122,7 @@
         <div class="contactinfo">
 
             <div>
-              <a href="https://www.linkedin.com/in/bijay-baral-05134514a"><i class="fa fa-linkedin" aria-hidden="true"></i>
+              <a href="https://www.linkedin.com/in/bijay-baral-05134514a"><i class="fab fa-linkedin" aria-hidden="true"></i>
             </a>  
             </div>
             
