--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
       <div class="open">
               <div class="darkoption">
               <span><i class="fas fa-sun"></i></span>
+              <span class="moon"><i class="fas fa-moon"></i></span>
           </div>
           <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
 
