--- a/Sideproject.html
+++ b/Sideproject.html
@@ -48,7 +48,7 @@
 
         <h1>Side projects</h1>
 
-        <div class="grid-container">
+        <div class="grid-container grid-container2">
        
                <div>
                 <h1>Music App</h1>
