--- a/index.html
+++ b/index.html
@@ -38,6 +38,10 @@
         <a href="#projects">My Projects</a>
         <a href="#contactinfo">Contact Info</a>
       </div>
+        
+              <div class="icon">
+          <span class="sun"><i class="fas fa-sun"></i></span>
+      </div>
 
       <div class="open">
           <span style="font-size:30px;cursor:pointer" onclick="openNav()">&#9776;</span>
@@ -123,7 +127,7 @@
             </div>
             
             <div>
-           <i class="fa fa-envelope" aria-hidden="true">Mail: bijaybaral55@gmail.com</i>
+           <a href = "mailto:bijaybaral55@gmail.com"><i class="fas fa-envelope" aria-hidden="true"></i></a>
             </div>
 
     </div>
