--- a/Frontendmentor.html
+++ b/Frontendmentor.html
@@ -301,7 +301,7 @@
 </div>
             
         <div>
-    <h1>Time Tracking</h1>
+    <h1>Time Tracking dashboard using(JSON)</h1>
         <img src="./images/timetracking.PNG">
         
         <div class="imgtxt">
