--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             I pride myself of being a hardworking and ambitious person. So, I work hard to ensure that the final product is completed 
             before the deadline. I am a well-organised person with a clear approach to the problem-solving. 
             I would like to describe myself as a calm-minded, patience, enthusiastic, detail-oriented and good-natured person. 
-            The most satisfying part of web development I like about is seeing own product going on live in the real world without 
+            The most satisfying part of web development I like about is seeing your own product going on live in the real world without 
             having any issues. 
         </p>
 
