--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </p>
 
         <p>
-            Skills: HTML,CSS and JS.
+            Skills: HTML, CSS, Bootstrap and JS.
         </p>
 
         <div class="projects"><a name="projects"></a>
