--- a/Sideproject.html
+++ b/Sideproject.html
@@ -107,6 +107,7 @@
                 </div>
 
             </div>
+                  <div>
                   
                       <div>
                 <h1>Animelist</h1>
