--- a/Sideproject.html
+++ b/Sideproject.html
@@ -114,7 +114,7 @@
         <div>
                 
             <div>
-        <h1>E-commerce Website</h1>
+        <h1>Animelist</h1>
         <img class="img" src="./images/anime.PNG">
         
         <div class="imgtxt">
