--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="aboutme"><a name="aboutme"></a>
         
         <h1>About Me</h1>
-        <p>A University student studying Computing Foundation Degree. I've always been passionate and interested in coding, especially related to 
+        I've always been passionate and interested in coding, especially related to 
             web development, responsive design and accessibility. I enjoy coding and love to make new productive website every-time. 
             I pride myself of being a hardworking and ambitious person. So, I work hard to ensure that the final product is completed 
             before the deadline. I am a well-organised person with a clear approach to the problem-solving. 
