--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 
                     
                     <div>
-                        <h1>Side Work</h1>
+                        <h1>Other Demo</h1>
                         <img class="img" src="./images/musicapp.JPG">
                         
                         <div class="imgtxt">
