--- a/Sideproject.html
+++ b/Sideproject.html
@@ -46,7 +46,7 @@
   
     <div class="projects">
 
-        <h1>Side Work</h1>
+        <h1>Other Demos</h1>
 
         <div class="grid-container grid-container2">
        
