--- a/Frontendmentor.html
+++ b/Frontendmentor.html
@@ -48,7 +48,7 @@
 
         <h1>Front-End-Mentor Projects</h1>
 
-  <p>I took these challenges from a front-end mentor to test my skill. Therefore, all the image that I have used in this projects belongs to them. If you want to know more about this website, 
+  <p>I took these challenges from a front-end mentor to test my skill. Therefore, all the image that I have used in this project belongs to them. If you want to know more about this website, 
                 then you can click on this link <a class="link" href="https://www.frontendmentor.io/">Front-End-Mentor.</a>
             </p>
         <div class="grid-container">
