--- a/index.html
+++ b/index.html
@@ -68,13 +68,10 @@
     <div class="aboutme"><a name="aboutme"></a>
         
         <h1>About Me</h1>
-        I've always been passionate and interested in coding, especially related to 
-            web development, responsive design and accessibility. I enjoy coding and love to make new productive website every-time. 
-            I pride myself of being a hardworking and ambitious person. So, I work hard to ensure that the final product is completed 
-            before the deadline. I am a well-organised person with a clear approach to the problem-solving. 
-            I would like to describe myself as a calm-minded, patience, enthusiastic, detail-oriented and good-natured person. 
-            The most satisfying part of web development I like about is seeing your own product going on live in the real world without 
-            having any issues. 
+        <p>
+I've always been passionate and interested in coding, especially related to web development, responsive design and accessibility. I enjoy coding and love to make new productive websites every time. I pride myself on being a hardworking and ambitious person. So, I work hard to ensure that the final product is completed before the deadline. I am a well-organised person with a clear approach to problem-solving. I would like to describe myself as a calm-minded, patience, enthusiastic, detail-oriented and good-natured person. The most satisfying part of web development I like about is seeing your product going on live in the real world without having any issues.
+
+Skills: HTML, CSS, Bootstrap and JS.
         </p>
 
         <p>
