--- a/Sideproject.html
+++ b/Sideproject.html
@@ -82,6 +82,8 @@
         <div>
             
         </div>
+            
+        </div>
 
          <footer>
         <h1>Contact Info</h1><a name="contactinfo"></a>
