--- a/frontendmentor.html
+++ b/frontendmentor.html
@@ -49,7 +49,7 @@
 
   <div class="projects text-center">
 
-    <h1>Front-End-Mentor Projects</h1>
+    <h1>Front-End-Mentor</h1>
 
 <p>I took these challenges from a front-end mentor to test my skill. Therefore, all the image that I have used in this project belongs to them. If you want to know more about this website, 
             then you can click on this link <a class="text-dark" href="https://www.frontendmentor.io/">Front-End-Mentor.</a>
