--- a/otherdemos.html
+++ b/otherdemos.html
@@ -91,7 +91,7 @@ if(data.demos){
 
  <div class="p-2 text-center card">
 
-   <h1>${item.title}</h1>
+   <h4 class="text-dark">${item.title}</h4>
    <img src="${item.images}">
    <a class="text-dark h5" href="https://${item.viewpage}">Viewpage</a>
 
