--- a/index.html
+++ b/index.html
@@ -56,13 +56,16 @@
 
 
 
-    <div id="particles-js">
+ <div class="intro-section">
 
-      <div class="intro mt-5">
-        <h1>Welcome to my Portfolio</h1>
-      </div>
-
-    </div>
+  
+  <canvas id="particles-js"></canvas>
+  
+  <div class="intro mt-5">
+    <h1>Welcome to my Portfolio</h1>
+  </div>
+  
+</div>
 
     <!-- end of intro -->
 
