--- a/otherdemos.html
+++ b/otherdemos.html
@@ -166,7 +166,7 @@ function check()
         else if (checkbox.checked == false)
         {
             React.style.display = "none";
-            JS.style.display = "flex";
+            JS.style.display = "grid";
         }
 
 }   
