--- a/otherdemos.html
+++ b/otherdemos.html
@@ -134,7 +134,7 @@ if(data.ReactDemos){
 
  var card = `
 
- <div class="p-2 text-center card">
+ <div class="p-2 mt-2 text-center card">
 
    <h4 class="text-dark">${item.title}</h4>
    <img src="${item.images}">
