--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
       </p>
 
       <p>
-        Skills: HTML, CSS, JS, SASS and Bootstrap.
+        Skills: HTML, CSS, JS, SASS, React and Bootstrap.
       </p>
 
     </div>
