--- a/otherdemos.html
+++ b/otherdemos.html
@@ -134,7 +134,7 @@ if(data.ReactDemos){
 
  var card = `
 
- <div class="p-2 mt-2 text-center card">
+ <div class="p-2 mx-2 mt-2 text-center card">
 
    <h4 class="text-dark">${item.title}</h4>
    <img src="${item.images}">
@@ -160,7 +160,7 @@ function check()
 
         if (checkbox.checked == true)
         {
-            React.style.display = "block";
+            React.style.display = "grid";
             JS.style.display = "none";
         }
         else if (checkbox.checked == false)
