--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         as a calm-minded, patience, enthusiastic, detail-oriented and good-natured person.
       </p>
 
-      <h5>Skills</h5>
+      <p>Skills: HTML, CSS & JS, SASS, Bootstrap & React</p>
 
     </div>
 
