--- a/frontendmentor.html
+++ b/frontendmentor.html
@@ -18,7 +18,7 @@
   <script src="js.js" defer></script>
 </head>
 
-<body onload="myFunction()" style="margin:0;">
+<body onload="myFunction2()" style="margin:0;">
 
   <div id="loading">
     <div id="loader"></div>
