--- a/otherdemos.html
+++ b/otherdemos.html
@@ -65,7 +65,7 @@
         <input type="checkbox" id="checkbox" onclick="check()"/>
         <span class="slider round"></span>
       </label> 
-      <span style="font-weight:bold;">React</span>
+      <span style="font-weight:bold;">MERN</span>
     </div>
    </div>
 
