--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         as a calm-minded, patience, enthusiastic, detail-oriented and good-natured person.
       </p>
 
-      <p>Skills: HTML, CSS & JS, SASS, Bootstrap & React</p>
+      <p>Skills: HTML, CSS & JS, SASS, Bootstrap,MERN & React</p>
 
     </div>
 
