--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
         as a calm-minded, patience, enthusiastic, detail-oriented and good-natured person.
       </p>
 
-      <p>Skills:SASS, Bootstrap,MERN & React</p>
+       <h1>Skills</h1>
+      <p>HTML, CSS, JS, MERN, Bootstrap, GraphQL, RestAPIs, SASS</p>
 
     </div>
 
