--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="about-me text-center px-3">
 
        <h1>Skills</h1>
-      <p>HTML, CSS, JS, MERN, Bootstrap, GraphQL, RestAPIs, SASS</p>
+      <p>JS, MERN, Bootstrap, GraphQL, RestAPIs, SASS,Mysql</p>
 
     </div>
 
